--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GROQ_API_KEY = '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'
-GOOGLE_API_KEY = 'AIzaSyCXpFpdumOEU1OCPOUQebffG2QuHLa7oB4'
+GROQ_API_KEY = 'groq_api_key'
+GOOGLE_API_KEY = 'google_api_key'
